--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Word Arithmetic Solver</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="shortcut icon" href="favicon.ico">
+  <meta name="viewport" content="width=670, initial-scale=1">
 </head>
 
 <body><center>
