--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
         <div class="word" id="word3" onclick="edit3()">SNORE</div>
       </td>
       <td>
-        <button class="operationbutton" id="plus" onclick="operationchange(plus)">+</button><br>
-        <button class="operationbutton" id="minues" onclick="operationchange(minus)">&#8722;</button><br>
-        <button class="operationbutton" id="multiply" onclick="operationchange(multiply)"><span style="font-size:65%">&#10005;</span></button><br>
-        <button class="operationbutton" id="divide" onclick="operationchange(divide)">&#247;</button><br>
-        <button class="operationbutton" onclick="operationchange(equals)">=</button>&nbsp;&nbsp;&nbsp;<br>
-      </td>
+        &nbsp;&nbsp;&nbsp;<button class="letterbutton" id="a" onclick="letter(a)">A</button><button class="letterbutton" id="b" onclick="letter(b)">B</button><button class="letterbutton" id="c" onclick="letter(c)">C</button><br>
+        &nbsp;&nbsp;&nbsp;<button class="letterbutton" id="d" onclick="letter(d)">D</button><button class="letterbutton" id="e" onclick="letter(e)">E</button><button class="letterbutton" id="f" onclick="letter(f)">F</button><br>
+        &nbsp;&nbsp;&nbsp;<button class="letterbutton" id="g" onclick="letter(g)">G</button><button class="letterbutton" id="h" onclick="letter(h)">H</button><button class="letterbutton" id="i" onclick="letter(i)">I</button><br>
+        &nbsp;&nbsp;&nbsp;<button class="letterbutton" id="j" onclick="letter(j)">J</button><button class="letterbutton" id="k" onclick="letter(k)">K</button><button class="letterbutton" id="l" onclick="letter(l)">L</button><br>
+        &nbsp;&nbsp;&nbsp;<button class="letterbutton" id="m" onclick="letter(m)">M</button><button class="letterbutton" id="n" onclick="letter(n)">N</button><button class="letterbutton" id="o" onclick="letter(o)">O</button><br>
+        &nbsp;&nbsp;&nbsp;<button class="letterbutton" id="p" onclick="letter(p)">P</button><button class="letterbutton" id="q" onclick="letter(q)">Q</button><button class="letterbutton" id="r" onclick="letter(r)">R</button><br>
+        &nbsp;&nbsp;&nbsp;<button class="letterbutton" id="s" onclick="letter(s)">S</button><button class="letterbutton" id="t" onclick="letter(t)">T</button><button class="letterbutton" id="u" onclick="letter(u)">U</button><br>
+        &nbsp;&nbsp;&nbsp;<button class="letterbutton" id="v" onclick="letter(v)">V</button><button class="letterbutton" id="w" onclick="letter(w)">W</button><button class="letterbutton" id="x" onclick="letter(x)">X</button><br>
+        &nbsp;&nbsp;&nbsp;<button class="letterbutton" id="y" onclick="letter(y)">Y</button><button class="letterbutton" id="z" onclick="letter(z)">Z</button><button class="letterbutton" id="del" onclick="letter(del)" style="font-size:100%; text-align:left; padding:2px 0px 0px 1px;">&#9003;</button><br>
+    </td>
     </tr>
 
     <tr><td></td><td><center><br>
