--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
     <tr><td></td><td><center><br>
       <a href="#popup1"><img src="http://jdgmiles.github.io/questionmark.png" style="width:60px"></a>
-      <a href="http://jdgmiles.github.io/" target="_blank"><img src="http://jdgmiles.github.io/jdgm.png" style="width:60px"></a>				<a href="https://twitter.com/jimdgmiles" target=blank_><img title="James Miles on Twitter" src="http://jdgmiles.github.io/twitter.png" style="width:60px; height:60px"></a></center>
+      <a href="https://twitter.com/jimdgmiles" target=blank_><img title="James Miles on Twitter" src="http://jdgmiles.github.io/twitter.png" style="width:60px; height:60px"></a>
+      <a href="http://jdgmiles.github.io/" target="_blank"><img src="http://jdgmiles.github.io/jdgm.png" style="width:60px"></a></center>
     </td></tr>
 
   </table>
