--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
   </table>
 
   <div id="popup1" class="overlay">
-    <div class="popup">
-      <div style="font-family:Georgia; color:white; text-align:left; font-size:170%; border:0px; text-decoration:underline;">Word Arithmetic Solver</div>
+    <div class="popup" style="text-align:left;">
+      <div style="font-family:Georgia; color:white; text-align:left; font-size:43px; border:0px; text-decoration:underline;">Word Arithmetic Solver</div>
       <a class="close" href="#">&times;</a>
-      <p style="font-family:Georgia; font-size:120%; color:white; text-align:left;">Change the words by clicking them and using the alphabet on the right.<br><br>Choose your operation from the four on the left, then press the equals sign to compute a solution.<br><br>As an example, try pressing &ldquo;=&rdquo; with the initial words TIE, TRY, SNORE.</p>
+      <p style="font-family:Georgia; font-size:28px; color:white; display:inline; text-align:left;"><br>Change the words by clicking them and using the alphabet on the right.<br><br>Choose your operation from the four on the left, then press the equals sign to compute a solution.<br><br>As an example, try pressing &ldquo;=&rdquo; with the initial words TIE, TRY, SNORE.</p>
     </div>
   </div>
 
